# kakaotalk-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: setup_env.bat
src/kakao_mcp/: __init__.py  __main__.py  config.py  controller.py  parser.py  server.py
tests/: test_controller.py  test_parser.py
