[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kakao-mcp-server"
version = "0.1.0"
description = "MCP Server for KakaoTalk PC automation via Win32 API"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.3.0",
    "pywin32>=306",
    "pyperclip>=1.8.2",
    "watchdog>=3.0.0",
]

[project.scripts]
kakao-mcp-server = "kakao_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kakao_mcp"]
