[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kakaotalk-mcp"
version = "0.2.0"
description = "MCP Server for KakaoTalk PC automation via Win32 API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "kronenz"}]
keywords = ["mcp", "kakaotalk", "automation", "win32", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "mcp[cli]>=1.3.0",
    "pywin32>=306",
]

[project.urls]
Homepage = "https://github.com/kronenz/kakaotalk-mcp"
Repository = "https://github.com/kronenz/kakaotalk-mcp"
Issues = "https://github.com/kronenz/kakaotalk-mcp/issues"

[project.scripts]
kakaotalk-mcp = "kakao_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kakao_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
